<resources>
    <string name="app_name">Rolity</string>
    <string name="novedades">NOVEDADES</string>
    <string name="logorolity">logoRolity</string>
    <string name="precio">599,00€</string>
    <string name="nombrePatin">Powerslide HC Pro Evo</string>
    <string name="patin">patin</string>
    <string name="iconousuario">iconoUsuario</string>
    <string name="iconobarras">iconoBarras</string>
    <string name="bannerenvio">bannerEnvio</string>
    <string name="banneroutlet">bannerOutlet</string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="usuario">Usuario:</string>
    <string name="contrasenia">Contraseña:</string>
    <string name="botonEntrar">Entrar</string>
    <string name="textoRegistrar">Regístrese</string>
    <string name="textoContrasenia">Contraseña</string>
    <string name="botonRegistro">Registro</string>
    <string name="botonDatos">Datos</string>
    <string name="botonLista">Mi lista</string>
    <string name="textoDatosIdentificacion">Datos de identificación</string>
    <string name="textoDatosFacturacion">Datos de facturación</string>
    <string name="textoDatosEnvio">Datos de envío</string>
    <string name="botonGuardarCambios">Guardar cambios</string>
    <string name="repetirContrasenia">Repetir contraseña:</string>
    <string name="nombreUsuario">Nombre de usuario:</string>
    <string name="email">E-mail:</string>
    <string name="textoNombre">Nombre:</string>
    <string name="textoApellidos">Apellidos:</string>
    <string name="textoTlf">Teléfono:</string>
    <string name="textoDireccion">Dirección:</string>
    <string name="botonComprar">Comprar</string>
    <string name="textoPais">País:</string>
    <string name="textoCP">Código postal:</string>
    <string name="textoProvincia">Provincia:</string>
    <string name="textoLocalidad">Localidad:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_datos_usuario">Fragment Datos Usuario</string>
    <string name="label_lista_usuario">Fragment Lista Usuario</string>
    <string name="open">open</string>
    <string name="create_new">crear</string>
    <string name="hintNomUsuario">Nombre de usuario</string>
    <string name="rbMantenerSesion">Mantener sesión iniciada</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="botonRegistrarUsuario">Registrar</string>
    <string name="headerFormRegistro">¡ÚNETE A ROLITY!</string>
    <string name="title_activity_producto">ActivityProducto</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_lk_a_s_d_jasd">lkASDJasd</string>
    <string name="title_activity_as">as</string>
    <string name="botonfavorito">botonFavorito</string>
    <string name="flecha_atras">Flecha atrás</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="aniadir_al_carrito">Añadir al carrito</string>
    <string name="comprar">Comprar</string>
    <string name="aviso_no_logeado_carrito">Inicie sesión para ver su lista de compra.</string>
    <string name="aviso_no_logeado_favoritos">Inicie sesión para ver su lista de favoritos.</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="aviso_carrito_vacio">Vaya… Tu lista de la compra está vacía!</string>
    <string name="aviso_favoritos_vacio">Vaya… Tu lista de favoritos está vacía!</string>
    <string name="buscar">Buscar</string>
    <string name="logo_tres_barras">Logo tres barras</string>
    <string name="lupa">lupa</string>
    <string name="usuario2">Usuario</string>
    <string name="categoria">Categoria</string>
    <string name="patines">Patines</string>
    <string name="longboard">Longboard</string>
    <string name="login">Login</string>
    <string name="registro">Registro</string>
    <string name="busqueda">Búsqueda</string>
</resources>