<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#BCBCBC"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/bordecustom">

                <ImageView
                    android:id="@+id/logoTresBarras"
                    android:layout_width="36dp"
                    android:layout_height="29dp"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:contentDescription="@string/iconobarras"
                    app:srcCompat="@drawable/tres_barras" />

                <ImageView
                    android:id="@+id/logoUsuario"
                    android:layout_width="36dp"
                    android:layout_height="29dp"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@string/iconousuario"
                    app:srcCompat="@drawable/usuario" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logoRolity"
                    android:layout_width="100dp"
                    android:layout_height="71dp"
                    android:layout_gravity="center|top"
                    android:contentDescription="@string/logorolity"
                    android:onClick="abrirMain"
                    app:srcCompat="@drawable/logo_rolity_amarillo" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="338dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:background="#303030" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="601dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/iniciarSesion"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="340dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/usuario"
                        android:textAllCaps="true"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/sesionUsuario"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/hintNomUsuario"
                        android:inputType="textPersonName"
                        android:textColor="#000000"
                        android:textColorHint="#3C3C3C" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="340dp"
                    android:layout_height="67dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contrasenia"
                        android:textAllCaps="true"
                        android:textColor="#000000"
                        android:textColorHint="#454545"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/sesionContrasenia"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/textoContrasenia"
                        android:inputType="textPassword"
                        android:textColorHint="#3C3C3C" />

                </LinearLayout>

                <RadioButton
                    android:id="@+id/botonSesion"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/rbMantenerSesion"
                    android:textColor="#000000"
                    android:textColorHint="#020101"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/botonEntrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bordecustombotonseleccionado"
                    android:text="@string/botonEntrar"
                    android:textColor="#000000" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="338dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:background="#303030" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/textoRegistrar"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textColorHint="#373737"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:inputType="textMultiLine"
                    android:text="Si todavía no tiene una cuenta de usuario, utilice esta opción para acceder al formulario de registro. \n \n Le solicitaremos la información necesaria para agilizar el proceso de compra."
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText,TextViewEdits" />

                <Button
                    android:id="@+id/botonRegistro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bordecustombotonseleccionado"
                    android:text="@string/botonRegistro"
                    android:textColor="#000000" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>