<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BCBCBC"
    android:orientation="vertical"
    tools:context="com.example.rolity.ActivityLista">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/bordecustom">

        <ImageView
            android:id="@+id/logoTresBarras"
            android:layout_width="36dp"
            android:layout_height="29dp"
            android:layout_gravity="center|start"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/iconobarras"
            app:srcCompat="@drawable/tres_barras" />

        <ImageView
            android:id="@+id/logoUsuario"
            android:layout_width="36dp"
            android:layout_height="29dp"
            android:layout_gravity="center|end"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/iconousuario"
            android:onClick="abrirUsuario"
            app:srcCompat="@drawable/usuario" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoRolity"
            android:layout_width="100dp"
            android:layout_height="71dp"
            android:layout_gravity="center|top"
            android:contentDescription="@string/logorolity"
            android:onClick="abrirMain"
            app:srcCompat="@drawable/logo_rolity_amarillo" />

        <View
            android:id="@+id/divider"
            android:layout_width="338dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="#303030" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/botonDatos"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bordecustombotondeseleccionado"
            android:onClick="abrirUsuario"
            android:text="@string/botonDatos"
            android:textColor="#000000" />

        <Button
            android:id="@+id/botonLista"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bordecustombotonseleccionado"
            android:text="@string/botonLista"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>