<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BCBCBC"
    tools:context="com.matheus.rolity.ActivityLoginRegister">

    <RelativeLayout
        android:id="@+id/layoutSuperiorProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFEC00">

        <ImageView
            android:id="@+id/flechaAtras"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/flecha_atras"
            app:srcCompat="@drawable/flecha" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/flechaAtras"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layoutSuperiorProducto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logoRolity"
                    android:layout_width="100dp"
                    android:layout_height="71dp"
                    android:layout_gravity="center|top"
                    android:contentDescription="@string/logorolity"
                    app:srcCompat="@drawable/logo_rolity_amarillo" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="338dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:background="#303030" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="601dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/iniciarSesion"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textAllCaps="true"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/loginEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/correo_electronico"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textColorHint="#3C3C3C" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contrasenia"
                        android:textAllCaps="true"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/loginPass"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/textoContrasenia"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="#3C3C3C" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="14dp" />

                <Button
                    android:id="@+id/botonEntrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/boton_seleccionado"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/botonEntrar"
                    android:textColor="#000000" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="14dp" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="338dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:background="#303030" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="14dp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/textoRegistrar"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textColorHint="#373737"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:inputType="textMultiLine"
                    android:text="Si todavía no tiene una cuenta de usuario, utilice esta opción para acceder al formulario de registro. \n \n Le solicitaremos la información necesaria para agilizar el proceso de compra."
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText,TextViewEdits" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="14dp" />

                <Button
                    android:id="@+id/botonRegistro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/boton_seleccionado"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/botonRegistro"
                    android:textColor="#000000" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>