<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BCBCBC"
    android:orientation="vertical"
    tools:context="com.example.rolity.ActivityUsuario">

    <FrameLayout
        android:id="@+id/layoutMenu"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_margin="10dp"
        android:background="@drawable/bordecustom">

        <ImageView
            android:id="@+id/logoTresBarras"
            android:layout_width="36dp"
            android:layout_height="29dp"
            android:layout_gravity="center|start"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/iconobarras"
            app:srcCompat="@drawable/tres_barras" />

        <ImageView
            android:id="@+id/logoUsuario"
            android:layout_width="36dp"
            android:layout_height="29dp"
            android:layout_gravity="center|end"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/iconousuario"
            app:srcCompat="@drawable/usuario" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layoutLogo"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoRolity"
            android:layout_width="100dp"
            android:layout_height="71dp"
            android:layout_gravity="center|top"
            android:contentDescription="@string/logorolity"
            android:onClick="abrirMain"
            app:srcCompat="@drawable/logo_rolity_amarillo" />

        <View
            android:id="@+id/divider"
            android:layout_width="338dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="#303030" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">
        <!--app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.211"-->

        <Button
            android:id="@+id/botonDatos"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bordecustombotonseleccionado"
            android:text="@string/botonDatos"
            android:textColor="#000000" />

        <Button
            android:id="@+id/botonLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bordecustombotondeseleccionado"

            android:text="@string/botonLista"
            android:textColor="#000000" />
        <!--android:onClick="abrirLista"-->

    </LinearLayout>

    <FrameLayout
        android:id="@+id/contenedorUsuario"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>