<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BCBCBC"
    tools:context="com.example.rolity.FragmentLista">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="380dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:onClick="abrirProducto">


                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="153dp"
                        android:layout_height="155dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:contentDescription="@string/patin" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="104dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/nombrePatin"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|end"
                        android:text="@string/precio"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="380dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal"></LinearLayout>

                <Button
                    android:id="@+id/btnComprar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:background="@drawable/bordecustombotonseleccionado"
                    android:text="@string/botonComprar"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>